; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libdb/extr_debug.c_getdbgchar.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libdb/extr_debug.c_getdbgchar.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64 (%struct.TYPE_3__*, i8*, i32)* }

@current_device = common dso_local global %struct.TYPE_3__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8 ()* @getdbgchar to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal signext i8 @getdbgchar() #0 {
  %1 = alloca i8, align 1
  %2 = alloca i64, align 8
  store i8 0, i8* %1, align 1
  store i64 0, i64* %2, align 8
  %3 = load %struct.TYPE_3__*, %struct.TYPE_3__** @current_device, align 8
  %4 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %3, i32 0, i32 0
  %5 = load i64 (%struct.TYPE_3__*, i8*, i32)*, i64 (%struct.TYPE_3__*, i8*, i32)** %4, align 8
  %6 = load %struct.TYPE_3__*, %struct.TYPE_3__** @current_device, align 8
  %7 = call i64 %5(%struct.TYPE_3__* %6, i8* %1, i32 1)
  store i64 %7, i64* %2, align 8
  %8 = load i64, i64* %2, align 8
  %9 = icmp sgt i64 %8, 0
  br i1 %9, label %10, label %13

10:                                               ; preds = %0
  %11 = load i8, i8* %1, align 1
  %12 = sext i8 %11 to i32
  br label %14

13:                                               ; preds = %0
  br label %14

14:                                               ; preds = %13, %10
  %15 = phi i32 [ %12, %10 ], [ 0, %13 ]
  %16 = trunc i32 %15 to i8
  ret i8 %16
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
